react今日搬砖解释

--- a/2022-11-4/life-1.html
+++ b/2022-11-4/life-1.html
@@ -55,7 +55,7 @@
           console.log('Count-componentDidMount')
         }
 
-        // 组件将要卸载
+        // 卸载前
         componetWillUnmount() {
           console.log('Count-componentWillunmount')
         }
@@ -68,12 +68,12 @@
           // return false
         }
 
-        // 组件将要更新
+        // 更新前
         componentWillUpdate() {
           console.log('Count-componentWillUpdate')
         }
 
-        // 组件更新完毕
+        // 更新后
         componentDidUpdate() {
           console.log('Count-componentDidUpdate')
         }
